--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,10 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   margin: 0;
+  padding: 0;
 }
 
 #app {
-  height: 100vh;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
